[gd_scene load_steps=35 format=3 uid="uid://cu461pr2e02ux"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_luoma"]
[ext_resource type="Texture2D" uid="uid://d0tpy48whxys6" path="res://assets/art/characters/enemies/Enemy_Spritesheet_Punk.png" id="2_ue2fo"]
[ext_resource type="Texture2D" uid="uid://cyvqsiykb0u8u" path="res://assets/art/prototyp/emote_faceHappy.png" id="3_lb8ex"]
[ext_resource type="Texture2D" uid="uid://bcogjg6rw18yp" path="res://assets/art/prototyp/emote_faceAngry.png" id="4_yx7lv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ah8s"]
atlas = ExtResource("2_ue2fo")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrgg8"]
atlas = ExtResource("2_ue2fo")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0xp0"]
atlas = ExtResource("2_ue2fo")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k72y0"]
atlas = ExtResource("2_ue2fo")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkjom"]
atlas = ExtResource("2_ue2fo")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui3db"]
atlas = ExtResource("2_ue2fo")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lspdn"]
atlas = ExtResource("2_ue2fo")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubpp1"]
atlas = ExtResource("2_ue2fo")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3yrj"]
atlas = ExtResource("2_ue2fo")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_50c4u"]
atlas = ExtResource("2_ue2fo")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_incfn"]
atlas = ExtResource("2_ue2fo")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_byo2m"]
atlas = ExtResource("2_ue2fo")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdw48"]
atlas = ExtResource("2_ue2fo")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbv0v"]
atlas = ExtResource("2_ue2fo")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m22ua"]
atlas = ExtResource("2_ue2fo")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcl2i"]
atlas = ExtResource("2_ue2fo")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly87n"]
atlas = ExtResource("2_ue2fo")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnje2"]
atlas = ExtResource("2_ue2fo")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrif1"]
atlas = ExtResource("2_ue2fo")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf3dq"]
atlas = ExtResource("2_ue2fo")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjm18"]
atlas = ExtResource("2_ue2fo")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4gj1"]
atlas = ExtResource("2_ue2fo")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxa0s"]
atlas = ExtResource("2_ue2fo")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvdwf"]
atlas = ExtResource("2_ue2fo")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_roepv"]
atlas = ExtResource("2_ue2fo")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_38gyb"]
atlas = ExtResource("2_ue2fo")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pglfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ah8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrgg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0xp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k72y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkjom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui3db")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lspdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubpp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3yrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50c4u")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_incfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byo2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdw48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbv0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m22ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcl2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly87n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnje2")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrif1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf3dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjm18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4gj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxa0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvdwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roepv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38gyb")
}],
"loop": false,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lk44m"]
radius = 41.0122

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2f8md"]
radius = 8.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hqntq"]
radius = 11.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_luoma")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pglfb")
animation = &"hit"

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_lk44m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_2f8md")

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_hqntq")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="emotionHappy" type="TextureRect" parent="."]
offset_left = -20.0
offset_top = -26.0
offset_right = 60.0
offset_bottom = 70.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_lb8ex")

[node name="emotionAngry" type="TextureRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -26.0
offset_right = 60.0
offset_bottom = 70.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_yx7lv")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -8.0
offset_top = -15.0
offset_right = 142.0
offset_bottom = 12.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
